--- a/Resources/administration/src/module/sw-plugin/component/sw-plugin-file-upload/sw-plugin-file-upload.scss
+++ b/Resources/administration/src/module/sw-plugin/component/sw-plugin-file-upload/sw-plugin-file-upload.scss
@@ -1,5 +1,9 @@
 .sw-plugin-file-upload {
 
+    .sw-button {
+        line-height: 27px;
+    }
+
     .sw-plugin-file-upload__file-input {
         display: none;
     }
