--- a/Resources/administration/src/app/component/tree/sw-tree-input-field/sw-tree-input-field.html.twig
+++ b/Resources/administration/src/app/component/tree/sw-tree-input-field/sw-tree-input-field.html.twig
@@ -16,7 +16,7 @@
                             {% block sw_tree_input_fieldslot_content %}
                                 <sw-confirm-field :value="currentValue"
                                                   @input="createNewItem"
-                                                  :placeholder="$tc('sw-category.general.buttonCreateCategory')">
+                                                  :placeholder="$tc('sw-tree.general.buttonCreate')">
                                 </sw-confirm-field>
                             {% endblock %}
                         </slot>
