--- a/Resources/administration/src/module/sw-category/component/sw-category-tree/sw-category-tree.html.twig
+++ b/Resources/administration/src/module/sw-category/component/sw-category-tree/sw-category-tree.html.twig
@@ -4,115 +4,41 @@
         :items="categories"
         :sortable="true"
         :searchable="false"
-        :createFirstItem="addFirstCategory"
-        :openedTreeById="openedTreeById"
+        :activeTreeItemId="activeTreeItemId"
+        :translationContext="translationContext"
+        :onChangeRoute="changeCategory"
+        :disableContextMenu="disableContextMenu"
+        @delete-element="onDeleteCategory"
+        @save-tree-items="saveCategories"
         @sw-tree-on-drag-end="onUpdatePositions"
-        @getTreeItems="getChildren">
+        @get-tree-items="onGetTreeItems">
 
-        {% block sw_category_tree_actions %}
-            <template slot="actions">
-                <div v-if="checkedCategoriesCount > 0" class="sw-category-tree-actions__headline">
-                    <span>{{ $tc('sw-category.general.treeHeadSelected', 0, { count: checkedCategoriesCount }) }}:</span>
-                    <span class="sw-category-tree__batch-delete" @click="deleteSelectedCategories">{{ $tc('sw-category.general.actions.delete') }}</span>
-                </div>
-
-                <div v-else class="sw-category-tree-actions__headline">
-                    <span>{{ $tc('sw-category.general.treeHeadline') }}</span>
-                </div>
-            </template>
-        {% endblock %}
 
         {% block sw_category_tree_items %}
-            <template slot="items" slot-scope="{ treeItems, sortable, draggedItem }">
+            <template
+                slot="items"
+                slot-scope="{
+                    treeItems,
+                    sortable,
+                    draggedItem,
+                    newElementId,
+                    checkItem,
+                    translationContext,
+                    onChangeRoute,
+                    disableContextMenu
+                }">
                 <sw-tree-item
                     v-for="(item, index) in treeItems"
                     :key="item.id"
                     :item="item"
                     :active="item.active"
-                    :ref="`treeItem.${item.id}`"
-                    :sortable="true"
+                    :translationContext="translationContext"
+                    :onChangeRoute="onChangeRoute"
+                    :sortable="sortable"
                     :draggedItem="draggedItem"
+                    :disableContextMenu="disableContextMenu"
+                    :newElementId="newElementId"
                     @itemChecked="checkItem">
-
-                    {% block sw_category_tree_items_content %}
-                        <template slot="content" slot-scope="{ item }">
-                            {% block sw_category_tree_items_item_content_edit %}
-                                <template v-if="currentEditCategory === item.data.id">
-                                    <sw-confirm-field
-                                        class="sw-category-detail__edit-category-field"
-                                        v-model="item.data.name"
-                                        :preventEmptySubmit="true"
-                                        @input="onEditCategoryFinish"
-                                        @blur="abortCreateCategory(item)"
-                                        @cancelSubmit="abortCategoryEdit(item)"
-                                        :placeholder="$tc('sw-category.general.buttonCreateCategory')">
-                                    </sw-confirm-field>
-                                </template>
-                            {% endblock %}
-
-                            {% block sw_category_tree_items_item_content_default %}
-                                <template v-else>
-                                    <a class="tree-link" @click="changeCategory(item)">
-                                        <span class="sw-tree-item__label">{{ item.data.name || item.data.meta.viewData.name }}</span>
-                                    </a>
-                                </template>
-                            {% endblock %}
-                        </template>
-                    {% endblock %}
-
-                    {% block sw_category_tree_items_actions %}
-                        <template slot="actions" slot-scope="{ item, openTreeItem }">
-                            <sw-context-button menuVerticalAlign="top">
-
-                                <div class="sw-context-menu__group">
-                                    {% block sw_category_tree_items_actions_subcategory %}
-                                        <sw-context-menu-item
-                                            v-tooltip="{ showDelay: 300, message: $tc('sw-category.general.actions.actionsDisabledInLanguage'), disabled: checkDefaultLanguage() }"
-                                            :disabled="currentEditCategory !== null || !checkDefaultLanguage()"
-                                            @click="addSubcategory(item); openTreeItem(true)">
-                                            {{ $tc('sw-category.general.actions.createSub') }}
-                                        </sw-context-menu-item>
-                                    {% endblock %}
-                                </div>
-
-                                <div class="sw-context-menu__group">
-                                    {% block sw_category_tree_items_actions_categorybefore %}
-                                        <sw-context-menu-item
-                                            v-tooltip="{ showDelay: 300, message: $tc('sw-category.general.actions.actionsDisabledInLanguage'), disabled: checkDefaultLanguage() }"
-                                            :disabled="currentEditCategory !== null || !checkDefaultLanguage()"
-                                            @click="addCategory(item, 'before');">
-                                            {{ $tc('sw-category.general.actions.createBefore') }}
-                                        </sw-context-menu-item>
-                                    {% endblock %}
-                                    {% block sw_category_tree_items_actions_categoryafter %}
-                                        <sw-context-menu-item
-                                            v-tooltip="{ showDelay: 300, message: $tc('sw-category.general.actions.actionsDisabledInLanguage'), disabled: checkDefaultLanguage() }"
-                                            :disabled="currentEditCategory !== null || !checkDefaultLanguage()"
-                                            @click="addCategory(item, 'after');">
-                                            {{ $tc('sw-category.general.actions.createAfter') }}
-                                        </sw-context-menu-item>
-                                    {% endblock %}
-                                </div>
-
-                                {% block sw_category_tree_items_actions_group %}
-                                    <div class="sw-context-menu__group">
-                                        {% block sw_category_tree_items_actions_duplicate %}
-                                            <sw-context-menu-item @click="onDuplicateCategory(item)">
-                                                {{ $tc('sw-category.general.actions.duplicate') }}
-                                            </sw-context-menu-item>
-                                        {% endblock %}
-                                        {% block sw_category_tree_items_actions_delete %}
-                                            <sw-context-menu-item variant="danger" @click="onDeleteCategory(item.id)">
-                                                {{ $tc('sw-category.general.actions.delete') }}
-                                            </sw-context-menu-item>
-                                        {% endblock %}
-                                    </div>
-                                {% endblock %}
-
-                            </sw-context-button>
-                        </template>
-                    {% endblock %}
-
                 </sw-tree-item>
             </template>
         {% endblock %}
