--- a/Resources/administration/src/app/component/tree/sw-tree-item/sw-tree-item.scss
+++ b/Resources/administration/src/app/component/tree/sw-tree-item/sw-tree-item.scss
@@ -86,6 +86,17 @@ $sw-tree-item-color-text: $color-gutenberg;
         }
     }
 
+    &.is--active {
+        > .sw-tree-item__element {
+            background: $sw-tree-item-color-background;
+
+            .sw-tree-item__icon,
+            .sw-tree-item__content {
+                color: $color-shopware-blue;
+            }
+        }
+    }
+
     .sw-tree-item__toggle {
         width: 15px;
         height: 24px;
